@@ -1,4 +1,7 @@
-$Id: Changelog.txt,v 1.33 2014/02/03 15:45:07 nanard Exp $
+$Id: Changelog.txt,v 1.34 2014/05/01 21:05:14 nanard Exp $
+
+2014/05/01:
+	listen on only 1 IPv4 if only 1 interface is specified
 
 2014/02/03:
 	silently ignore EAGAIN, EWOULDBLOCK, EINTR of recv calls
